Added about section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </header>
   <main>
     <section>
-      <div class="profile-section">
+      <div id="home" class="profile-section">
         <img src="./images/profile-image.jpeg" />
         <h3 class="profile-section-h3">Hi! I'm Gayathri Krishnan <img id="hand-icon" src="./images/hand-icon.png"/></h3>
         <h1 class="profile-section-h1">Software Engineer based in London.</h1>
@@ -37,13 +37,19 @@
       </div>
 
     </section>
+
+    <!-- About Me-->
     <section>
        <div id="about" class="about-section">
           <h4>Introduction</h4>
           <h2>About Me</h2>
           <div class="about-section-content">
-            <div style="position: relative; max-width: max-content;">
-              <img id="about-section-profile-image"src="./images/profile-image.jpeg" alt="Gayathri Krishnan Profile Image"/>
+            <div style="position: relative; max-width: max-content; bottom: 58px;">
+              <img id="about-section-profile-image"src="./images/profile.JPG" alt="Gayathri Krishnan Profile Image"/>
+              <div class="about-section-profile-image-circle">
+                <img style="width: 100%;" src="./images/circular-text.png" alt="Gayathri Krishnan Profile Image Circle"/>
+                <img class="about-section-profile-developer-icon"src="./images/dev-icon.png" alt="Developer Icon" />
+              </div>
             </div>
             <div class="about-section-content-right"style="flex: 1 1 0%;">
               <p>
@@ -69,13 +75,48 @@
                   <p>Build more than 5 projects</p>
                 </li>
               </ul>
+              <h4 style="margin-top: 1.5rem; margin-bottom: 1.5rem;color: #374151; "> Tools I use </h4>
+              <ul class="technologies-icons">
+                 <li class="technologies-icons-list">
+                  <img src="./images/react.png" alt="vscode icon" style="width: 2rem; margin-top: 0px;" />
+                </li>
+                <li class="technologies-icons-list">
+                  <img src="./images/html.webp" alt="vscode icon" style="width: 2rem; margin-top: 0px;" />
+                </li>
+                <li class="technologies-icons-list">
+                  <img src="./images/css.webp" alt="vscode icon" style="width: 2rem; margin-top: 0px;" />
+                </li>
+                <li class="technologies-icons-list">
+                  <img src="./images/bootstrap.png" alt="vscode icon" style="width: 2rem; margin-top: 0px;" />
+                </li>
+                <li class="technologies-icons-list">
+                  <img src="./images/js.webp" alt="vscode icon" style="width: 2rem; margin-top: 0px;" />
+                </li>
+                <li class="technologies-icons-list">
+                  <img src="./images/sql.webp" alt="vscode icon" style="width: 2rem; margin-top: 0px;" />
+                </li>
+                <li class="technologies-icons-list">
+                  <img src="./images/figma.png" alt="vscode icon" style="width: 2rem; margin-top: 0px;" />
+                </li>
+                <li class="technologies-icons-list">
+                  <img src="./images/heroku.jpg" alt="vscode icon" style="width: 2rem; margin-top: 0px;" />
+                </li>
+                <li class="technologies-icons-list">
+                  <img src="./images/vscode.png" alt="vscode icon" style="width: 2rem; margin-top: 0px;" />
+                </li>
+              </ul>
             </div>
           </div>
 
        </div>
     </section>
-    <section>
 
+    <!-- My Work Section -->
+    <section>
+      <div id="work" class="work-section">
+        
+
+      </div>
     </section>
     <section>
 
