--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gayathri Krishnan - PortFolio</title>
+  <link rel="icon" type="image/svg+xml" href="/images/dev-icon.png">
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&amp;family=Ovo&amp;display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
 </head>
@@ -18,7 +19,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About Me</a></li>
         <li><a href="#work">My Work</a></li>
-        <li><a href="#contact">Contact Me</a></li>
+        <li><a href="#contact-me">Contact Me</a></li>
       </ul>
       <a href="#contact" id="contact">Contact<img id="contact-arrow" src="./images/arrow-icon.png" alt="contact-icon"></a>
     </nav>
@@ -114,17 +115,98 @@
     <!-- My Work Section -->
     <section>
       <div id="work" class="work-section">
-        
-
+        <h4 class="work-section-h4">My Portfolio</h4>
+        <h2 class="work-section-h2">My Latest Work</h2>
+        <p class="work-section-p">Welcome to my web development portfolio! Explore a collection of projects showcasing my expertise in front-end development.</p>
       </div>
+      <div class="work-section-projects">
+        <div class="work-section-projects-work-1">
+          <div class="work-section-projects-work-background-square">
+              <div>
+                <a href="https://scrimba.com/learn-react-legacy-c003ni72th/~01v/s0v216n1kg/head"><h2 style="font-weight: 600; font-size: inherit; margin: 0 ">Airbnb Clone</h2></a>
+              </div>
+              <div class="send-icon">
+                <img src="images/send-icon.png" alt="send icon" />
+              </div>
+          </div>
+        </div>
+        <div class="work-section-projects-work-2">
+          <div class="work-section-projects-work-background-square">
+              <div>
+                <h2 style="font-weight: 600; font-size: inherit; margin: 0 ">Job Connect Live</h2>
+                </div>
+              <div class="send-icon">
+                <img src="images/send-icon.png" alt="send icon" />
+              </div>
+          </div>
+        </div>
+        <div class="work-section-projects-work-3">
+          <div class="work-section-projects-work-background-square">
+              <div>
+                <h2 style="font-weight: 600; font-size: inherit; margin: 0 ">Travel Journal</h2>
+               </div>
+              <div class="send-icon">
+                <img src="images/send-icon.png" alt="send icon" />
+              </div>
+          </div>
+        </div>
+        <div class="work-section-projects-work-4">
+          <div class="work-section-projects-work-background-square">
+              <div>
+                <h2 style="font-weight: 600; font-size: inherit; margin: 0 ">Weather App</h2>
+              </div>
+              <div class="send-icon">
+                <img src="images/send-icon.png" alt="send icon" />
+              </div>
+          </div>
+        </div>
+      </div>
+      <a href="https://github.com/Gathie0307" class="show-more-button">
+          show more
+           <img style="width: 1rem;" src="./images//right-arrow-bold.png" alt="right arrow bold" />
+      </a>
     </section>
-    <section>
 
+    <!-- Contact Me Section-->
+    <section>
+      <div id="contact-me" class="contact-section">
+        <h4 class="work-section-h4">Connect with me</h4>
+        <h2 class="work-section-h2">Get in touch</h2>
+        <p class="work-section-p">I'd love to hear from you! If you have any questions, comments or feedback, please use the form below.</p>
+        <form action="" class="contact-form">
+          <div class="contact-form-div">
+            <input class="contact-form-input-field" type="text" placeholder="Enter your name"/>
+            <input class="contact-form-input-field" type="email" placeholder="Enter your email"/>
+          </div>
+          <textarea rows="4" cols="100" placeholder="Type your message here.."></textarea>
+          <button id="submit-button" type="submit">
+            Submit now
+            <img src="./images/right-arrow-white.png" alt="right arrow white" style="width: 1rem;"/>
+          </button>
+        </form>
+      </div>
     </section>
   </main>
   </header>
-  <footer>
-    <!-- <p>© 2023 Gayathri Krishnan. All rights reserved.</p> -->
+  <footer class="footer-section">
+    <div style="margin-top: 5rem;">
+      <div style="text-align: center;">
+        <img style="margin-bottom: 0.5rem; margin: 0 auto; width: 9rem;" src="./images/name-logo.png" alt="Gayathri Krishnan Logo"/>
+        <div class="footer-section-links">
+          <img src="./images/mail_icon.png" alt="mail icon" style="width: 1.5rem;"/>
+          iamkgayu@gmail.com
+        </div>
+      </div>
+      <div class="footer-section-networks-links">
+        <p>© 2025 Gayathri Krishnan. All rights reserved.</p>
+        <ul>
+          <li><a href="">Email</a></li>
+          <li><a href="https://www.linkedin.com/in/gkrishnan48/">Linked In</a></li>
+          <li><a href="https://github.com/Gathie0307">Github</a></li>
+        </ul>
+      </div>
+    </div>
+
   </footer>
 </body>
 <script src="./script.js"></script>
