added alignment changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="#work">My Work</a></li>
         <li><a href="#contact-me">Contact Me</a></li>
       </ul>
-      <a href="#contact" id="contact">Contact<img id="contact-arrow" src="./images/arrow-icon.png" alt="contact-icon"></a>
+      <a href="#contact-me" id="contact">Contact<img id="contact-arrow" src="./images/arrow-icon.png" alt="contact-icon"></a>
     </nav>
   </header>
   <main>
@@ -32,8 +32,8 @@
         <h1 class="profile-section-h1">Software Engineer based in London.</h1>
         <p>I am a Software Engineer from London, United Kingdom with 3+ years of experience in multiple companies like Microsoft, Tesla and Apple.</p>
         <div class="profile-section-buttons">
-          <a href="#contact" id="profile-section-contact-button">contact me <img src="./images/right-arrow-white.png" alt="contact arrow white" /></a>
-          <a href="#contact" id="profile-section-download-icon">download <img src="./images/download-icon.png" alt="download icon" /></a>
+          <a href="#contact-me"" id="profile-section-contact-button">contact me <img src="./images/right-arrow-white.png" alt="contact arrow white" /></a>
+          <a href="./download/GayathriKrishnanResume.pdf" id="profile-section-download-icon" download="">download <img id="download-icon-image" src="./images/download-icon.png" alt="download icon" /></a>
       </div>
       </div>
 
@@ -123,7 +123,7 @@
         <div class="work-section-projects-work-1">
           <div class="work-section-projects-work-background-square">
               <div>
-                <a href="https://scrimba.com/learn-react-legacy-c003ni72th/~01v/s0v216n1kg/head"><h2 style="font-weight: 600; font-size: inherit; margin: 0 ">Airbnb Clone</h2></a>
+                <a style="text-decoration: none;" href="https://github.com/Gathie0307/airbnb-clone-cars-for-rent" target="_blank"><h2 style="font-weight: 600; font-size: inherit; margin: 0 ">Airbnb Clone</h2></a>
               </div>
               <div class="send-icon">
                 <img src="images/send-icon.png" alt="send icon" />
@@ -133,7 +133,7 @@
         <div class="work-section-projects-work-2">
           <div class="work-section-projects-work-background-square">
               <div>
-                <h2 style="font-weight: 600; font-size: inherit; margin: 0 ">Job Connect Live</h2>
+                   <a style="text-decoration: none;" href="https://github.com/Gathie0307/job-connect-live" target="_blank"></a> <h2 style="font-weight: 600; font-size: inherit; margin: 0 ">Job Connect Live</h2>
                 </div>
               <div class="send-icon">
                 <img src="images/send-icon.png" alt="send icon" />
@@ -143,7 +143,7 @@
         <div class="work-section-projects-work-3">
           <div class="work-section-projects-work-background-square">
               <div>
-                <h2 style="font-weight: 600; font-size: inherit; margin: 0 ">Travel Journal</h2>
+                <a style="text-decoration: none;" href="https://scrimba.com/learn-react-legacy-c003ni72th/~01v/s0v216n1kg/head" target="_blank"></a> <h2 style="font-weight: 600; font-size: inherit; margin: 0 ">Travel Journal</h2>
                </div>
               <div class="send-icon">
                 <img src="images/send-icon.png" alt="send icon" />
@@ -153,7 +153,7 @@
         <div class="work-section-projects-work-4">
           <div class="work-section-projects-work-background-square">
               <div>
-                <h2 style="font-weight: 600; font-size: inherit; margin: 0 ">Weather App</h2>
+                 <a style="text-decoration: none;" href="https://github.com/Gathie0307/WeatherApp" target="_blank"></a> <h2 style="font-weight: 600; font-size: inherit; margin: 0 ">Weather App</h2>
               </div>
               <div class="send-icon">
                 <img src="images/send-icon.png" alt="send icon" />
@@ -161,7 +161,7 @@
           </div>
         </div>
       </div>
-      <a href="https://github.com/Gathie0307" class="show-more-button">
+      <a href="https://github.com/Gathie0307" target="_blank" class="show-more-button">
           show more
            <img style="width: 1rem;" src="./images//right-arrow-bold.png" alt="right arrow bold" />
       </a>
