added complete changes for portfolio

--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
       </div>
       <div class="footer-section-networks-links">
         <p>© 2025 Gayathri Krishnan. All rights reserved.</p>
-        <ul>
-          <li><a href="">Email</a></li>
-          <li><a href="https://www.linkedin.com/in/gkrishnan48/">Linked In</a></li>
-          <li><a href="https://github.com/Gathie0307">Github</a></li>
+        <ul style="list-style-type: none">
+          <li><a style="text-decoration: none; color:black" href="">Email</a></li>
+          <li><a style="text-decoration: none; color:black"  href="https://www.linkedin.com/in/gkrishnan48/">Linked In</a></li>
+          <li><a style="text-decoration: none; color:black" href="https://github.com/Gathie0307">Github</a></li>
         </ul>
       </div>
     </div>
