--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   <main>
     <section>
       <div id="home" class="profile-section">
-        <img src="./images/profile-image.jpeg" />
+        <img src="./images/profile-image.jpeg" alt=""profile image/>
         <h3 class="profile-section-h3">Hi! I'm Gayathri Krishnan <img id="hand-icon" src="./images/hand-icon.png"/></h3>
-        <h1 class="profile-section-h1">Software Engineer based in London.</h1>
-        <p>I am a Software Engineer from London, United Kingdom with 3+ years of experience in multiple companies like Microsoft, Tesla and Apple.</p>
+        <h1 class="profile-section-h1">Full Stack Web Developer based in London.</h1>
+        <p>Full Stack Web Developer crafting engaging, user-focused digital experiences with a strong foundation in Agile practices. Le Wagon graduate passionate about building seamless web applications.</p>
         <div class="profile-section-buttons">
           <a href="#contact-me"" id="profile-section-contact-button">contact me <img src="./images/right-arrow-white.png" alt="contact arrow white" /></a>
           <a href="./download/GayathriKrishnanResume.pdf" id="profile-section-download-icon" download="">download <img id="download-icon-image" src="./images/download-icon.png" alt="download icon" /></a>
@@ -117,7 +117,7 @@
       <div id="work" class="work-section">
         <h4 class="work-section-h4">My Portfolio</h4>
         <h2 class="work-section-h2">My Latest Work</h2>
-        <p class="work-section-p">Welcome to my web development portfolio! Explore a collection of projects showcasing my expertise in front-end development.</p>
+        <p class="work-section-p">Welcome to my web development portfolio! Dive into projects that highlight my skills in front-end and full-stack development—each crafted with performance, usability, and clean design in mind</p>
       </div>
       <div class="work-section-projects">
         <div class="work-section-projects-work-1">
@@ -200,9 +200,9 @@
       <div class="footer-section-networks-links">
         <p>© 2025 Gayathri Krishnan. All rights reserved.</p>
         <ul style="list-style-type: none">
-          <li><a style="text-decoration: none; color:black" href="">Email</a></li>
-          <li><a style="text-decoration: none; color:black"  href="https://www.linkedin.com/in/gkrishnan48/">Linked In</a></li>
-          <li><a style="text-decoration: none; color:black" href="https://github.com/Gathie0307">Github</a></li>
+          <li><a style="text-decoration: none; color:black" href="" target="_blank">Email</a></li>
+          <li><a style="text-decoration: none; color:black"  href="https://www.linkedin.com/in/gkrishnan48/" target="_blank">Linked In</a></li>
+          <li><a style="text-decoration: none; color:black" href="https://github.com/Gathie0307" target="_blank">Github</a></li>
         </ul>
       </div>
     </div>
